added fonts; first desing changes; update green

--- a/app/globals.css
+++ b/app/globals.css
@@ -23,7 +23,7 @@
 
         --accent: #1700FE; /* Specific Blue from user */
         --accent-foreground: 0 0% 100%; /* White for text on this blue if needed */
-        --accent-green: #30FF6E; /* Specific Green from user */
+        --accent-green: #37BE5A; /* Specific Green from user */
 
         --destructive: 0 100% 50%;
         --destructive-foreground: 0 0% 100%;
